# NodeGet

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPER.md  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.sqlite.yml  package-lock.json  package.json  refactor-modular-crates.md
agent/: Cargo.toml  config.toml.example
agent/src/: config_access.rs  dry_run.rs  main.rs  ntp.rs
agent/src/config/: mod.rs  parse.rs
agent/src/monitoring/: gpu.rs  impls.rs  mod.rs
agent/src/monitoring/network_connections/: mod.rs  netlink.rs
agent/src/monitoring/system_impls/: mod.rs  process.rs
agent/src/rpc/: mod.rs  monitoring_data_report.rs  multi_server.rs
agent/src/tasks/: dns.rs  execute.rs  http_request.rs  ip.rs  mod.rs  pty.rs  self_update.rs
agent/src/tasks/ping/: http.rs  icmp.rs  mod.rs  tcp.rs
crates/ng-core/: Cargo.toml  build.rs
crates/ng-core/src/: error.rs  lib.rs  self_update.rs
crates/ng-core/src/js_result/: query.rs
crates/ng-core/src/monitoring/: query.rs
crates/ng-core/src/permission/: create.rs  data_structure.rs  mod.rs  permission_checker.rs  token_auth.rs
crates/ng-core/src/utils/: error_message.rs  mod.rs  server_json.rs  uuid.rs  version.rs
crates/ng-db/: Cargo.toml
crates/ng-db/migration/: Cargo.toml
crates/ng-db/migration/src/: lib.rs  m20260113_044428_create_static_monitoring.rs  m20260115_131325_create_dynamic_monitoring.rs  m20260118_030100_create_task.rs  m20260205_024306_create_kv.rs  m20260206_040842_create_crontab_result.rs  m20260509_000001_create_static.rs  m20260516_000000_add_storage_time.rs  m20260517_000000_add_soft_delete_to_monitoring_uuid.rs  m20260517_000001_add_enable_to_static.rs  m20260608_000000_add_indexes.rs  main.rs
crates/ng-db/src/: db_connection.rs  db_registry.rs  lib.rs
crates/ng-db/src/entity/: crontab_result.rs  db_registry.rs  dynamic_monitoring.rs  dynamic_monitoring_summary.rs  js_result.rs  kv.rs  mod.rs  static_file.rs  static_monitoring.rs  task.rs  token.rs
crates/ng-db/src/rpc/: mod.rs
crates/ng-infra/: Cargo.toml
crates/ng-infra/src/: dispatcher.rs  lib.rs  permission.rs  server.rs
crates/ng-js-runtime/: Cargo.toml
crates/ng-js-runtime/src/: inline_call.rs  js_worker_service.rs  lib.rs  nodeget.rs  runtime_pool.rs  server_runtime.rs  spawn_on_server_runtime.rs  types.rs
nodeget-lib/: .gitignore  Cargo.toml  build.rs
nodeget-lib/src/: lib.rs  self_update.rs
nodeget-lib/src/args_parse/: agent.rs  server.rs
nodeget-lib/src/config/: agent.rs  mod.rs  server.rs
nodeget-lib/src/crontab/: mod.rs  result.rs
nodeget-lib/src/crontab_result/: query.rs
nodeget-lib/src/js_runtime/: mod.rs
nodeget-lib/src/kv/: mod.rs
nodeget-lib/src/metadata/: mod.rs
nodeget-lib/src/monitoring/: data_structure.rs  mod.rs  query.rs
nodeget-lib/src/permission/: data_structure.rs
nodeget-lib/src/task/: mod.rs  query.rs
nodeget-lib/src/utils/: error_message.rs  mod.rs  server_json.rs  version.rs
server/: .env.test  .gitignore  Cargo.toml  build.rs  config.toml.example
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20260101_000001_create_monitoring_tables.rs  m20260113_000000_create_monitoring_uuid.rs  m20260113_044428_create_static_monitoring.rs  m20260115_131325_create_dynamic_monitoring.rs  m20260118_030100_create_task.rs  m20260131_112949_create_token.rs  m20260206_035808_create_crontab.rs  m20260206_040842_create_crontab_result.rs  m20260327_150739_create_js_worker.rs  m20260328_033808_create_js_result.rs  m20260415_000000_create_dynamic_monitoring_summary.rs  m20260509_000000_add_js_worker_limits.rs  m20260517_000000_add_soft_delete_to_monitoring_uuid.rs  m20260524_000000_create_db_registry.rs
server/src/: agent_uuid_cache.rs  db_connection.rs  db_registry.rs  main.rs  monitoring_buffer.rs  monitoring_uuid_cache.rs  rpc_nodeget.rs  rpc_timing.rs  static_hash_cache.rs  utils.rs
server/src/crontab/: cache.rs  mod.rs  task.rs
server/src/db_connection/: mod.rs
server/src/db_connection/clean_up/: config.rs  generic.rs  mod.rs  postgres.rs
server/src/entities/: dynamic_cpu_per_core.rs  dynamic_disk.rs  dynamic_monitoring.rs  dynamic_network_interface.rs  mod.rs  prelude.rs  static_cpu_per_core.rs  static_monitoring.rs
server/src/entity/: crontab.rs  crontab_result.rs  dynamic_monitoring.rs  dynamic_monitoring_summary.rs  js_worker.rs  metadata.rs  mod.rs  monitoring_uuid.rs  prelude.rs  static_file.rs  static_monitoring.rs  task.rs
server/src/js_runtime/: inline_call.rs  mod.rs  nodeget.rs  runtime_pool.rs
server/src/kv/: mod.rs
server/src/launch/: autostart_manager.rs  mod.rs
server/src/logging/: mod.rs
server/src/monitoring/: data_structure.rs  database.rs  impls.rs  mod.rs
server/src/monitoring/network_connections/: mod.rs
server/src/rpc/: agent.rs  js.rs  mod.rs  nodeget.rs  task.rs
server/src/rpc/agent/: delete_common.rs  delete_dynamic.rs  delete_dynamic_summary.rs  delete_static.rs  mod.rs  query.rs  query_dynamic.rs  query_dynamic_avg.rs  query_dynamic_multi_last.rs  query_dynamic_summary.rs  query_dynamic_summary_avg.rs  query_dynamic_summary_multi_last.rs  query_static.rs  query_static_avg.rs  query_static_multi_last.rs  report.rs  report_dynamic.rs  report_dynamic_summary.rs  report_static.rs
server/src/rpc/agent_uuid/: delete.rs  list_all.rs  mod.rs
server/src/rpc/crontab/: auth.rs  create.rs  delete.rs  edit.rs  get.rs  mod.rs  set_enable.rs  toggle_enable.rs
server/src/rpc/crontab_result/: auth.rs  delete.rs  mod.rs  query.rs
server/src/rpc/db/: auth.rs  create.rs  delete.rs  exec_sql.rs  exec_templating.rs  list.rs  mod.rs  read.rs  update.rs
server/src/rpc/js_result/: delete.rs  mod.rs  query.rs
server/src/rpc/js_worker/: create.rs  delete.rs  get_rt_pool.rs  list_all_js_worker.rs  mod.rs  read.rs  run.rs  (+3 more)
server/src/static_file/: cache.rs  mod.rs
server/src/subcommands/: get_uuid.rs  init.rs  mod.rs  roll_super_token.rs  serve.rs
server/src/terminal/: auth.rs  check_agent.rs  mod.rs
server/src/token/: cache.rs  generate_token.rs  get.rs  mod.rs  super_token.rs
(+336 files in other folders)
