[package]
name = "nodeget-agent"
version = "0.0.1"
edition = "2024"

[dependencies]
nodeget-lib = { path = "../nodeget-lib", features = ["for-agent"] }

tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
parking_lot = "0.12.5"
uuid = { version = "1.19.0", default-features = false, features = ["std", "fast-rng", "v4"] }

# Dependency for system information
sysinfo = { version = "0.37.2", default-features = false, features = ["multithread", "windows", "disk", "network", "system"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.175"
heim-virt = "0.1.0-alpha.1"

[target.'cfg(target_os = "windows")'.dependencies]
raw-cpuid = "11.5.0"
netstat2 = "0.11.2"
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_System_ProcessStatus"] }
