[package]
name = "nodeget-agent"
version = "0.0.1"
edition = "2024"

[dependencies]
# Library For NodeGet
nodeget-lib = { path = "../nodeget-lib", features = ["for-agent"] }

# Asynchronous runtime
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "net", "fs", "signal", "process"] }
futures = "0.3.31"

# Logging
log = { version = "0.4.29", default-features = false, features = ["std", "serde"] }
simple_logger = { version = "5.1.0", default-features = false, features = ["threads", "time", "timestamps", "colored", "colors"] }

# Http Client
ureq = { version = "3.1", default-features = false, features = ["gzip", "rustls"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }

# parser
serde = { version = "1.0.228", default-features = false, features = ["std", "default"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
url = { version = "2.5.8", default-features = false, features = ["std", "serde"] }

# ICMP Ping
surge-ping = "0.8.4"

# Random Number Generation
rand = { version = "0.10.0-rc.6", default-features = false, features = ["small_rng", "std", "thread_rng"] }

# PTY
portable-pty = "0.9.0"

# Dependency for system information
## Main cross-platform library
sysinfo = { version = "0.37.2", default-features = false, features = ["multithread", "windows", "disk", "network", "system"] }
## Nvidia GPU Support
nvml-wrapper = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
# Raw bindings to libc functions (for reading information)
libc = "0.2.175"
# Virtualization detection
heim-virt = "0.1.0-alpha.1"

[target.'cfg(target_os = "windows")'.dependencies]
# Virtualization detection
raw-cpuid = "11.5.0"
# Network Connections
netstat2 = "0.11.2"
# Windows system calls
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_System_ProcessStatus"] }
