[package]
name = "nodeget-lib"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["fs"] }
uuid = { version = "1.19.0", default-features = false, features = ["std", "v5", "fast-rng", "v4", "serde"] }
machine-uid = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.9.11", default-features = false, features = ["std", "serde", "parse"] }
log = { version = "0.4.29", default-features = false, features = ["std", "serde"] }
url = { version = "2.5.8", default-features = false, features = ["std", "serde"] }
rand = { version = "0.9.2", default-features = false, features = ["std", "log"] }

[features]
for-agent = []
for-server = []

[build-dependencies]
vergen-git2 = { version = "10.0.0-beta.5", features = ["build", "cargo", "rustc"] }