[package]
name = "nodeget-lib"
version = "0.0.2"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["fs"] }
uuid = { version = "1.19.0", default-features = false, features = ["std", "v5", "fast-rng", "v4", "serde"] }
machine-uid = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.9.11", default-features = false, features = ["std", "serde", "parse"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
url = { version = "2.5.8", default-features = false, features = ["std", "serde"] }
rand = { version = "0.9", default-features = false, features = ["std", "thread_rng"] }
sha2 = "0.10"
thiserror = "2.0.18"
anyhow = "1.0.100"
palc = { version = "0.0.2", default-features = false, features = ["help"] }

[features]
for-agent = []
for-server = []

