[package]
name = "nodeget-server"
version = "0.0.1"
edition = "2024"
description = "Next-generation server monitoring and management tools"
license = "AGPL-3"
readme = "../README.md"
repository = "https://github.com/NodeSeekDev/NodeGet"
categories = ["asynchronous", "command-line-utilities", "network-programming", "os"]

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
nodeget-lib = { path = "../nodeget-lib", features = ["for-server"] }
migration = { path = "migration" }

uuid = { version = "1.19.0", default-features = false, features = ["v4"] }
futures = "0.3.31"
sea-orm = { version = "2.0.0-rc.28", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
serde = "1.0.228"
serde_json = "1.0.149"
jsonrpsee = { version = "0.26.0", default-features = false, features = ["server", "macros"] }
axum = { version = "0.8.8", default-features = false, features = ["tokio", "ws", "macros", "http1", "query"] }
tower = { version = "0.5.3" , default-features = false, features = ["tokio"]}

# Logging
log = { version = "0.4.29", default-features = false, features = ["std", "serde"] }
simple_logger = { version = "5.1.0", default-features = false, features = ["threads", "time", "timestamps", "colored", "colors"] }
url = "2.5.8"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { version = "0.6.1", optional = true }
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"], optional = true }

[features]
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]