[package]
edition = "2024"
name = "ng-migration"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[lib]
name = "ng_db_migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
default-features = false
features = [
    "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"
]
version = "2.0.0-rc.28"
